Bug 510072 - Config for offline updates no longer available
Summary: Config for offline updates no longer available
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: 6.4.90
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-09-29 21:05 UTC by Nicolas Fella
Modified: 2025-10-02 13:38 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (209.45 KB, image/png)
2025-09-29 21:05 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2025-09-29 21:05:19 UTC
Created attachment 185373 [details]
Screenshot

The updates KCM does not show the UI for enabling/disabling offline updates any more on Fedora KDE.

Seems to be a regression from https://invent.kde.org/plasma/discover/-/commit/1a527660dd6a127711ba53d685a78448940c2593

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2025-09-29 22:53:01 UTC
This was cherry-picked to 6.5; raising priority to HI.
Comment 2 Akseli Lahtinen 2025-09-30 08:56:33 UTC
Seems for me on Fedora 42 the ostree stuff is found

-- Checking for module 'ostree-1'
--   Found ostree-1, version 2025.6
-- Checking for module 'rpm-ostree-1'
--   Found rpm-ostree-1, version 2025.10
Comment 3 Bug Janitor Service 2025-09-30 09:02:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1166
Comment 4 Arjen Hiemstra 2025-10-02 13:37:42 UTC
Git commit 79df60ca93f554ed2078ffb855e4f1633cbd2dab by Arjen Hiemstra.
Committed on 02/10/2025 at 12:37.
Pushed by ngraham into branch 'master'.

kcm: Restore runtime check for OSTree backend

It's possible to build discover with the OSTree backend while running on
a system that doesn't actually use OSTree. This would mean there's no
option for selecting how system updates work even though the system
supports choosing that, as the current logic is purely tied to a compile
time check. This restores the runtime check if the OSTree backend was
built. The systemd case is still based on a compile-time check as I
don't know how to check that at runtime.

M  +6    -4    kcm/CMakeLists.txt
M  +7    -1    kcm/updates.cpp

https://invent.kde.org/plasma/discover/-/commit/79df60ca93f554ed2078ffb855e4f1633cbd2dab
Comment 5 Nate Graham 2025-10-02 13:38:12 UTC
Git commit 638c224f9916573ffe3dc6ca0ed3c49e8622b1d4 by Nate Graham.
Committed on 02/10/2025 at 13:38.
Pushed by ngraham into branch 'Plasma/6.5'.

kcm: Restore runtime check for OSTree backend

It's possible to build discover with the OSTree backend while running on
a system that doesn't actually use OSTree. This would mean there's no
option for selecting how system updates work even though the system
supports choosing that, as the current logic is purely tied to a compile
time check. This restores the runtime check if the OSTree backend was
built. The systemd case is still based on a compile-time check as I
don't know how to check that at runtime.


(cherry picked from commit 79df60ca93f554ed2078ffb855e4f1633cbd2dab)

Co-authored-by: Arjen Hiemstra <ahiemstra@heimr.nl>

M  +6    -4    kcm/CMakeLists.txt
M  +7    -1    kcm/updates.cpp

https://invent.kde.org/plasma/discover/-/commit/638c224f9916573ffe3dc6ca0ed3c49e8622b1d4